Fix:(Switch Alt item feature)Icon buttons not being displayed

--- a/erpnext/manufacturing/doctype/bom/alternative_items_selector.html
+++ b/erpnext/manufacturing/doctype/bom/alternative_items_selector.html
@@ -20,7 +20,7 @@
                   type="number" step="0.01"/>
         </td>
 				<td>
-            <button id="data-list-{{i}}" onclick="cur_frm.remove_row({{ i }})" type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></button>
+            <button id="data-list-{{i}}" onclick="cur_frm.remove_row({{ i }})" type="button" class="btn btn-danger"><span class="fa fa-trash-o"></button>
         </td>
 			  </tr>
 		  {% } %}
