--- a/erpnext/manufacturing/doctype/bom/switch_alternative_item.html
+++ b/erpnext/manufacturing/doctype/bom/switch_alternative_item.html
@@ -14,7 +14,7 @@
       <td width="30%">{{ data[i].qty }}</td>
       <td>
         <button id="data-list-{{i}}" onclick="cur_frm.select_row({{i}})" type="button" class="btn btn-success"><span
-            class="glyphicon glyphicon-check"></button>
+            class="fa fa-check-square-o"></button>
       </td>
     </tr>
     {% } %}
