--- a/erpnext/manufacturing/doctype/work_order/alternative_items_selector.html
+++ b/erpnext/manufacturing/doctype/work_order/alternative_items_selector.html
@@ -12,7 +12,7 @@
 			  <tr style="text-align: center" id="data-list-{{i}}">
 				<td>{{ data[i].alt_item }}</td>
 				<td>
-                    <button id="data-list-{{i}}" onclick="cur_frm.select_row({{ i }})" type="button" class="btn btn-success"><span class="glyphicon glyphicon-check"></button>
+                    <button id="data-list-{{i}}" onclick="cur_frm.select_row({{ i }})" type="button" class="btn btn-success"><span class="fa fa-check-square-o"></button>
                 </td>
 			  </tr>
 		  {% } %}
