--- a/erpnext/manufacturing/doctype/bom/alternative_items_selector_bom.html
+++ b/erpnext/manufacturing/doctype/bom/alternative_items_selector_bom.html
@@ -24,8 +24,7 @@
             <button id="data-list-{{i}}"
                     onclick="cur_frm.select_row({{ i }})"
                     type="button"
-                    class="btn btn-success"
-                    title="Select this alternative item"
+                    class="btn {% if data[i].is_new %}btn-secondary{% else %}btn-success{% endif %}"
                     {% if data[i].is_new %}disabled{% endif %}>
                 <span class="fa fa-check-square-o"></span>
             </button>
