fix: alternatives not showing correctly in BOMs and WO (#239)
* fix: alternatives not showing correctly in BOMs and WO

* fix: alt items fetching

* fix: alternative items deletion

* fix: code rabbit suggestions

* fix: adding alternative items to alt item

* chore: code cleanpu logs

* fix: main item always showing

* fix: reverse alt

* fix: main item keeps on appearing

* chore: remove logs

* fix: typo

* fix: creating duplicate boms

* fix: ai suggestion

* fix: merge alternative item buttons

* fix: disable switch item if new

* ref: gray scale switch button if new

--- a/erpnext/manufacturing/doctype/bom/alternative_items_selector_bom.html
+++ b/erpnext/manufacturing/doctype/bom/alternative_items_selector_bom.html
@@ -21,6 +21,13 @@
         </td>
 				<td>
             <button id="data-list-{{i}}" onclick="cur_frm.remove_row({{ i }})" type="button" class="btn btn-danger"><span class="fa fa-trash-o"></button>
+            <button id="data-list-{{i}}"
+                    onclick="cur_frm.select_row({{ i }})"
+                    type="button"
+                    class="btn {% if data[i].is_new %}btn-secondary{% else %}btn-success{% endif %}"
+                    {% if data[i].is_new %}disabled{% endif %}>
+                <span class="fa fa-check-square-o"></span>
+            </button>
         </td>
 			  </tr>
 		  {% } %}
